# dream

./: .gitignore  00_START_HERE.md  01_PROJECT_OVERVIEW.md  02_DEVELOPER_GUIDE.md  1_PROJECT_OVERVIEW.md_ARCHIVE  2_SETUP_AND_DEPLOYMENT.md_ARCHIVE  3_IMPLEMENTATION_GUIDE.md_ARCHIVE  4_DEVELOPER_QUICK_REFERENCE.md_ARCHIVE  5_ROADMAP_AND_PHASES.md_ARCHIVE  API_TESTING_GUIDE.md  ARCHITECTURE_AND_SETUP_DETAILS.txt_ARCHIVE  AUTH_PAGES_FEATURE_STATUS.md  AUTH_QUICK_REFERENCE.md  B2B_API_CONTRACT.yaml  B2B_EDI_DESIGN.md  B2B_IMPLEMENTATION_STATUS.md  B2B_PARTNER_CHECKLIST.md  CI_CD_REFERENCE.md  COMPATIBILITY_ANALYSIS.md  COMPLETE_MONITORING_FILE_INVENTORY.md  COMPLETE_TOOL_INTEGRATION_PLAN.md  CONSOLIDATION_SUMMARY.md  CURRENT_STATUS_REPORT.md  DEFECTS_AND_CONFIGURATION_ISSUES.md_ARCHIVE  DELIVERY_SUMMARY.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_OPERATIONS.md  DOCKER_CONSOLIDATION_SUMMARY.md  DOCKER_FIXES_IMPLEMENTED.md_ARCHIVE  DOCKER_ISSUE_RESOLUTION.md_ARCHIVE  DOCKER_RECOVERY_GUIDE.md  DOCUMENTATION_CONSOLIDATION.md  Dockerfile.accounting  Dockerfile.api  ERROR_FIX_API_FALLBACK.md  FEATURE_TEST_GUIDE.md  FINAL_README.md  FINAL_STATUS.md  FOUNDATION_READY.md_ARCHIVE  IMPLEMENTATION_CHECKLIST.md  (+59 more)
_archive/: 00_OCR_PROJECT_COMPLETION_SUMMARY.md  AUTH_CONTEXT_FIX_SUMMARY.md  COMPLETE_DEVELOPMENT_SUMMARY.md  COMPLETE_SETUP_SUMMARY.md  COMPLETION_SUMMARY.md  DAY_2_UPDATE.md  DAY_3_UPDATE.md  DEVELOPMENT_QUICKSTART.md  DEVELOPMENT_RUNNING.md  DEVELOPMENT_SETUP_STATUS.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_SUMMARY.md  ENDPOINT_TEST_GUIDE.md  EXECUTE_NOW.md  FEATURE_DEVELOPMENT.md  GITHUB_IMPORT_GUIDE.md  IMPLEMENTATION_STATUS.md  IMPORT_EXECUTION_SCRIPTS.md  OCR_ARCHITECTURE_DOCUMENTATION.md  OCR_DOCUMENTATION_INDEX.md  OCR_FINAL_STATUS_REPORT.md  OCR_MODULE_COMPILATION_SUMMARY.md  OCR_QUICK_REFERENCE.md  PHASE_2_ROADMAP.md  REPOSITORIES_LIST.md  REPOSITORY_SETUP_COMPLETE.md
erp-accounting/: .dockerignore  .gitignore  Dockerfile  README.md  pom.xml
erp-ml/: .env.example  .gitignore  Dockerfile  Dockerfile.heavy  README.md  main.py  models.py  ocr_service.py  pyproject.toml
erp-ml/erp_ml/: __init__.py  main.py  models.py  ocr_service.py
(+233 files in other folders)
