[tool.poetry]

name = "erp-ml"

version = "1.0.0"

description = "Machine Learning models for ERP Platform"

authors = ["ERP Platform Team <dev@erp-platform.local>"]

license = "MIT"



[tool.poetry.dependencies]

python = "^3.11"

fastapi = "^0.104.0"

uvicorn = "^0.24.0"

python-multipart = "^0.0.6"

numpy = "^1.24.0"

pandas = "^2.1.0"

scikit-learn = "^1.3.0"

pydantic = "^2.4.0"

pydantic-settings = "^2.0.0"

python-dotenv = "^1.0.0"

sqlalchemy = "^2.0.0"

psycopg2-binary = "^2.9.0"

# Document Parsing - Primary OCR engine
paddleocr = "^2.7.0.3"

paddlepaddle = "^2.5.0"

# Image processing
pillow = "^10.0.0"

opencv-python = "^4.8.0"

python-dateutil = "^2.8.0"

# Redis client for caching
redis = "^5.0.0"

# MongoDB client
pymongo = "^4.6.0"

# For message queuing
pika = "^1.3.0"

# PDF parsing
pdfplumber = "^0.10.0"

# Barcode/QR code detection
pyzbar = "^0.1.9"



[tool.poetry.group.dev.dependencies]

pytest = "^7.4.0"

pytest-asyncio = "^0.21.0"

black = "^23.10.0"

ruff = "^0.11.0"

mypy = "^1.6.0"



[build-system]

requires = ["poetry-core"]

build-backend = "poetry.core.masonry.api"

